--- a/application/views/scripts/admin/members/index.phtml
+++ b/application/views/scripts/admin/members/index.phtml
@@ -18,6 +18,8 @@
         <div class="panel panel-default">
             <div class="panel-heading text-right">
                 <div class="btn-group" role="group" aria-label="...">
+                    <button data-action="save-order" class="btn btn-success" style="display: none;"><i class="glyphicon glyphicon-save" ></i> Save order</button>
+                    <button data-action="toggle-sort" class="btn btn-default"><i class="glyphicon glyphicon-list"></i> Change order</button>
                     <a 
                         href=" <?php echo $this->url(array('controller' => 'admin_members', 'action' => 'add'), 'default', true); ?>" type="button" 
                         class="btn btn-default"
@@ -30,6 +32,7 @@
                 <table id="rows-table" class="table table-striped table-hover">
                     <thead>
                         <tr>
+                            <th></th>
                             <th class="text-center">Img</th>
                             <th class="text-center">Status</th>
                             <th>First Name</th>
@@ -43,7 +46,8 @@
                         <?php
                             foreach ($this->members as $member) { 
                                 if ($member['status'] == Application_Model_DbTable_CmsMembers::STATUS_DISABLED) { ?>
-                                    <tr class="danger">
+                                    <tr class="danger" data-member-id="<?php echo $this->escape($member['id']); ?>">
+                                        <td class="text-center"><i data-action="sort" class="glyphicon glyphicon-list" style="display: none; cursor: pointer"></i></td>
                                         <td class="text-center"><img style="max-height: 24px;" src=" <?php echo $this->memberImgUrl($member); ?> "></td>
                                         <td class="text-center"><span class="badge alert-danger" title="disabled"><i class="glyphicon glyphicon-remove"></i></span></td>
                                         <td> <?php echo $this->escape($member['first_name']); ?> </td>
@@ -59,15 +63,16 @@
                                                 <a 
                                                     href=" <?php echo $this->url(array('controller' => 'admin_members', 'action' => 'edit', 'id' => $member['id']), 'default', true) ?> "
                                                     type="button" class="btn btn-default" title="edit"><i class="glyphicon glyphicon-pencil"></i></a>
-                                                <button type="button" data-memberId=" <?php echo $this->escape($member['id']); ?> " data-action="enable" class="btn btn-default" title="enable"><i class="glyphicon glyphicon-ok"></i></button>
-                                                <button type="button" data-memberId=" <?php echo $this->escape($member['id']); ?> " data-action="delete" class="btn btn-default" title="delete"><i class="glyphicon glyphicon-trash"></i></button>
+                                                <button type="button" data-member-id=" <?php echo $this->escape($member['id']); ?> " data-action="enable" class="btn btn-default" title="enable"><i class="glyphicon glyphicon-ok"></i></button>
+                                                <button type="button" data-member-id=" <?php echo $this->escape($member['id']); ?> " data-action="delete" class="btn btn-default" title="delete"><i class="glyphicon glyphicon-trash"></i></button>
                                             </div>
                                         </td>
                                     </tr>
                                 <?php 
                                 }
                                 else { ?> 
-                                    <tr>
+                                    <tr data-member-id="<?php echo $this->escape($member['id']); ?>">
+                                        <td class="text-center"><i data-action="sort" class="glyphicon glyphicon-list" style="display: none; cursor: pointer"></i></td>
                                         <td class="text-center"><img style="max-height: 24px;" src=" <?php echo $this->memberImgUrl($member); ?> "></td>
                                         <td class="text-center"><span class="badge alert-success" title="enabled"><i class="glyphicon glyphicon-ok"></i></span></td>
                                         <td> <?php echo $this->escape($member['first_name']); ?> </td>
@@ -83,8 +88,8 @@
                                                 <a 
                                                     href=" <?php echo $this->url(array('controller' => 'admin_members', 'action' => 'edit', 'id' => $member['id']), 'default', true) ?> "
                                                     type="button" class="btn btn-default" title="edit"><i class="glyphicon glyphicon-pencil"></i></a>
-                                                <button type="button" data-memberId=" <?php echo $this->escape($member['id']); ?> " data-action="disable" class="btn btn-default" title="disable"><i class="glyphicon glyphicon-remove"></i></button>
-                                                <button type="button" data-memberId=" <?php echo $this->escape($member['id']); ?> " data-action="delete" class="btn btn-default" title="delete"><i class="glyphicon glyphicon-trash"></i></button>
+                                                <button type="button" data-member-id=" <?php echo $this->escape($member['id']); ?> " data-action="disable" class="btn btn-default" title="disable"><i class="glyphicon glyphicon-remove"></i></button>
+                                                <button type="button" data-member-id=" <?php echo $this->escape($member['id']); ?> " data-action="delete" class="btn btn-default" title="delete"><i class="glyphicon glyphicon-trash"></i></button>
                                             </div>
                                         </td>
                                     </tr> 
@@ -168,11 +173,29 @@
     </div><!-- /.modal-dialog -->
 </form><!-- /.modal -->
 
+<form method="post" action=" <?php echo $this->url(array('controller' => 'admin_members', 'action' => 'updateorder'), 'default', true) ?> " style="display: none;" id="save-order-form">
+    <input type="hidden" name="task" value="saveOrder">
+    <input type="hidden" name="sorted_ids" value="">
+</form>
 
 
+<?php
+    $this->headLink()->appendStylesheet($this->baseUrl('/admin/bower_components/jquery-ui-1.12.0/jquery-ui.min.css'));
+    $this->inlineScript()->appendFile($this->baseUrl('/admin/bower_components/jquery-ui-1.12.0/jquery-ui.min.js'));
+?>
 
-<script>
+<script> 
     <?php $this->inlineScript()->captureStart(); ?>
+        
+//    DOM NODE
+//    \_Properties
+//        \_tagname
+//        \_class
+//    \_Data   (nesto custom sto mi hocemo da smestimo u dom [od HTML5])
+
+//funkcije za vadjenje: data, attr, prop
+    
+        
         
     $('#rows-table').on('click', '[data-action="delete"]', function(e) {
         e.preventDefault();
@@ -181,8 +204,8 @@
         var target = $(this).is('[data-action="delete"]') ? $(this) : $(this).closest('[data-action="delete"]');
         
         //dve verzije za vadjenje (od jQuery-a):
-        var memberId = target.attr('data-memberId'); 
-        //var memberId = target.data('memberId');
+        var memberId = target.attr('data-member-id'); 
+        //var memberId = target.data('member-id');
         //alert(memberId);              
         
         //.val() sluzi za dodeljivanje vrednosti poljima u formi
@@ -198,8 +221,12 @@
         var target = $(this).is('[data-action="disable"]') ? $(this) : $(this).closest('[data-action="disable"]');
         
         //dve verzije za vadjenje (od jQuery-a):
-        var memberId = target.attr('data-memberId'); 
-        //var memberId = target.data('memberId');
+        var memberId = target.attr('data-member-id'); //ovako hvatamo bilo koji atribut (href, id, src...)
+        //var memberId = target.data('member-id'); //ovako hvatamo svaki data atribut ( i izostavljamo rec data ispred) i moraju da budu sve mala slova
+        
+        
+        
+        
         //alert(memberId);              
         
         //.val() sluzi za dodeljivanje vrednosti poljima u formi
@@ -215,14 +242,88 @@
         var target = $(this).is('[data-action="enable"]') ? $(this) : $(this).closest('[data-action="enable"]');
         
         //dve verzije za vadjenje (od jQuery-a):
-        var memberId = target.attr('data-memberId'); 
-        //var memberId = target.data('memberId');
+        var memberId = target.attr('data-member-id'); 
+        //var memberId = target.data('memberId'); //ovo ne moze zbog 
         //alert(memberId);              
         
         //.val() sluzi za dodeljivanje vrednosti poljima u formi
         $('#enable-warning-dialog').find('[name="id"]').val(memberId);
         $('#enable-warning-dialog').modal('show');
     });
+    
+    $('[data-action="toggle-sort"]').on('click', function(e) {
+        e.preventDefault();
+        e.stopPropagation();
+       
+        var target = $(this).is('[data-action="toggle-sort"]') ? $(this) : $(this).closest('[data-action="toggle-sort"]');
+        var sortableTbody = $('#rows-table > tbody');
+        
+        if (target.hasClass('active')) {
+            target.removeClass('active');
+            target.html('<i class="glyphicon glyphicon-list"></i> Change order');
+            // delete sortable functionallity
+            sortableTbody.sortable('destroy');
+            
+            // restore old html into tbody
+            sortableTbody.html(sortableTbody.data('oldHtml'));
+            
+            //hide "handle" for sorting, the icon in first column
+            sortableTbody.find('[data-action="sort"]').hide();
+            
+            //hide "Save-order"
+            $('[data-action="save-order"]').hide();
+        }
+        else {
+            target.addClass('active');
+            
+            //method html
+            target.html('<i class="glyphicon glyphicon-remove"></i> Cancel');  //override-uje ceo html...
+            
+            //save tbody html before sorting under key "oldHtml" into its data
+            sortableTbody.data('oldHtml', sortableTbody.html()); //kada navedemo dva atributa to je setovanje
+            
+            //initialize sortable functionality
+            sortableTbody.sortable({
+                handle: '[data-action = "sort"]'
+            });
+            
+            //show "handle" for sorting, the icon in first column
+            sortableTbody.find('[data-action="sort"]').show();
+            
+            //hide "Save-order"
+            $('[data-action="save-order"]').show();
+        }
+    });
+    
+    
+    
+    $('[data-action="save-order"]').on('click', function(e) {
+        e.preventDefault();
+        e.stopPropagation();
+        
+        var memberSortedIds = $('#rows-table > tbody').sortable('toArray', {
+            attribute: 'data-member-id'
+        });
+    
+        //find element with name "sorted_ids" in save order form and set its value
+        //  with string in which are sorted ids separated with comma(,)
+        //  ex. "12,3,8,10,11,6,2,1,9,7,5,4"
+        var saveOrderForm = $('#save-order-form');
+        
+        saveOrderForm.find('[name="sorted_ids"]').val(memberSortedIds.join(','));
+        //alert(memberSortedIds);
+        
+        //manually submit form by triggering "submit" event
+        saveOrderForm.trigger('submit');
+        
+    });
+    
+    
+    
+    
+    
+    
+    
     
     
     <?php $this->inlineScript()->captureEnd(); ?>
