--- a/application/views/scripts/admin/services/index.phtml
+++ b/application/views/scripts/admin/services/index.phtml
@@ -19,6 +19,8 @@
         <div class="panel panel-default">
             <div class="panel-heading text-right">
                 <div class="btn-group" role="group" aria-label="...">
+                    <button data-action="save-order" class="btn btn-success" style="display: none;"><i class="glyphicon glyphicon-save" ></i> Save order</button>
+                    <button data-action="toggle-sort" class="btn btn-default"><i class="glyphicon glyphicon-list"></i> Change order</button>
                     <a 
                         href=" <?php echo $this->url(array('controller' => 'admin_services', 'action' => 'add'), 'default', true); ?>" type="button" 
                         class="btn btn-default"
@@ -28,9 +30,10 @@
             </div>
             <div class="panel-body">
 
-                <table class="table table-striped table-hover">
+                <table id="rows-table"  class="table table-striped table-hover">
                     <thead>
                         <tr>
+                            <th></th>
                             <th class="text-center">Icon</th>
                             <th class="text-center">Status</th>
                             <th>Title</th>
@@ -42,7 +45,8 @@
                         <?php
                             foreach ($this->services as $service) { 
                                 if ($service['status'] == Application_Model_DbTable_CmsMembers::STATUS_DISABLED) { ?>
-                                    <tr class="danger">
+                                    <tr data-service-id="<?php echo $this->escape($service['id']); ?>"  class="danger" >
+                                        <td class="text-center"><i data-action="sort" class="glyphicon glyphicon-list" style="display: none; cursor: pointer"></i></td>
                                         <td class="text-center"><i class=" <?php echo $this->escape($service['icon']); ?> "></i></td>
                                         <td class="text-center"><span class="badge alert-danger" title="disabled"><i class="glyphicon glyphicon-remove"></i></span></td>
                                         <td> <?php echo $this->escape($service['title']); ?> </td>
@@ -52,14 +56,16 @@
                                                 <a 
                                                     href=" <?php echo $this->url(array('controller' => 'admin_services', 'action' => 'edit', 'id' => $service['id']), 'default', true) ?> "
                                                     type="button" class="btn btn-default" title="edit"><i class="glyphicon glyphicon-pencil"></i></a>
-                                                <button type="button" class="btn btn-default" title="enable"><i class="glyphicon glyphicon-ok"></i></button>
+                                                <button type="button" data-service-id=" <?php echo $this->escape($service['id']); ?> " data-action="enable" class="btn btn-default" title="enable"><i class="glyphicon glyphicon-ok"></i></button>
+                                                <button type="button" data-service-id=" <?php echo $this->escape($service['id']); ?> " data-action="delete" class="btn btn-default" title="delete"><i class="glyphicon glyphicon-trash"></i></button>
                                             </div>
                                         </td>
                                     </tr>
                                 <?php 
                                 }
                                 else { ?> 
-                                    <tr>
+                                    <tr data-service-id="<?php echo $this->escape($service['id']); ?>">
+                                        <td class="text-center"><i data-action="sort" class="glyphicon glyphicon-list" style="display: none; cursor: pointer"></i></td>
                                         <td class="text-center"><i class=" <?php echo $this->escape($service['icon']); ?> "></i></td>
                                         <td class="text-center"><span class="badge alert-success" title="enabled"><i class="glyphicon glyphicon-ok"></i></span></td>
                                         <td> <?php echo $this->escape($service['title']); ?> </td>
@@ -70,7 +76,8 @@
                                                 <a 
                                                     href=" <?php echo $this->url(array('controller' => 'admin_services', 'action' => 'edit', 'id' => $service['id']), 'default', true) ?> "
                                                     type="button" class="btn btn-default" title="edit"><i class="glyphicon glyphicon-pencil"></i></a>
-                                                <button type="button" class="btn btn-default" title="disable"><i class="glyphicon glyphicon-remove"></i></button>
+                                                <button type="button" data-service-id=" <?php echo $this->escape($service['id']); ?> " data-action="disable" class="btn btn-default" title="disable"><i class="glyphicon glyphicon-remove"></i></button>
+                                                <button type="button" data-service-id=" <?php echo $this->escape($service['id']); ?> " data-action="delete" class="btn btn-default" title="delete"><i class="glyphicon glyphicon-trash"></i></button>
                                             </div>
                                         </td>
                                     </tr> 
@@ -86,7 +93,214 @@
             </div>
         </div>
     </div>
-    
-    
 </div>
 
+
+<form method="post" action=" <?php echo $this->url(array('controller' => 'admin_services', 'action' => 'delete'), 'default', true) ?> " id="delete-warning-dialog" class="modal fade" tabindex="-1" role="dialog">
+    <input type='hidden' name='task' value='delete'>
+    <input type='hidden' name='id' value="">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">Delete service</h4>
+            </div>
+            <div class="modal-body">
+                <p>Are you sure you want to delete service?</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button type="submit" class="btn btn-danger"><i class="glyphicon glyphicon-trash"></i>Delete</button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</form><!-- /.modal -->
+
+
+<form method="post" action=" <?php echo $this->url(array('controller' => 'admin_services', 'action' => 'enable'), 'default', true) ?> " id="enable-warning-dialog" class="modal fade" tabindex="-1" role="dialog">
+    <input type='hidden' name='task' value='enable'>
+    <input type='hidden' name='id' value="">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">Enable service</h4>
+            </div>
+            <div class="modal-body">
+                <p>Are you sure you want to enable service?</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button type="submit" class="btn btn-success"><i class="glyphicon glyphicon-check"></i>Enable</button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</form><!-- /.modal -->
+
+
+<form method="post" action=" <?php echo $this->url(array('controller' => 'admin_services', 'action' => 'disable'), 'default', true) ?> " id="disable-warning-dialog" class="modal fade" tabindex="-1" role="dialog">
+    <input type='hidden' name='task' value='disable'>
+    <input type='hidden' name='id' value="">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">Disable service</h4>
+            </div>
+            <div class="modal-body">
+                <p>Are you sure you want to disable service?</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button type="submit" class="btn btn-danger"><i class="glyphicon glyphicon-remove"></i>Disable</button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</form><!-- /.modal -->
+
+
+
+<form method="post" action=" <?php echo $this->url(array('controller' => 'admin_services', 'action' => 'updateorder'), 'default', true) ?> " style="display: none;" id="save-order-form">
+    <input type="hidden" name="task" value="saveOrder">
+    <input type="hidden" name="sorted_ids" value="">
+</form>
+
+
+<?php
+    $this->headLink()->appendStylesheet($this->baseUrl('/admin/bower_components/jquery-ui-1.12.0/jquery-ui.min.css'));
+    $this->inlineScript()->appendFile($this->baseUrl('/admin/bower_components/jquery-ui-1.12.0/jquery-ui.min.js'));
+?>
+
+
+
+<script> 
+    <?php $this->inlineScript()->captureStart(); ?>
+        
+    $('#rows-table').on('click', '[data-action="delete"]', function(e) {
+        e.preventDefault();
+        e.stopPropagation();
+        //neki browseri ne ocitiju dobro klik na dugme pa se sledecom linijom to preventuje
+        var target = $(this).is('[data-action="delete"]') ? $(this) : $(this).closest('[data-action="delete"]');
+        
+        //dve verzije za vadjenje (od jQuery-a):
+        var serviceId = target.attr('data-service-id'); 
+        //var serviceId = target.data('member-id');
+        //alert(serviceId);              
+        
+        //.val() sluzi za dodeljivanje vrednosti poljima u formi
+        $('#delete-warning-dialog').find('[name="id"]').val(serviceId);
+        $('#delete-warning-dialog').modal('show');
+    });
+    
+    
+    $('#rows-table').on('click', '[data-action="disable"]', function(e) {
+        e.preventDefault();
+        e.stopPropagation();
+        //neki browseri ne ocitiju dobro klik na dugme pa se sledecom linijom to preventuje
+        var target = $(this).is('[data-action="disable"]') ? $(this) : $(this).closest('[data-action="disable"]');
+        
+        //dve verzije za vadjenje (od jQuery-a):
+        var serviceId = target.attr('data-service-id'); //ovako hvatamo bilo koji atribut (href, id, src...)
+        //var serviceId = target.data('member-id'); //ovako hvatamo svaki data atribut ( i izostavljamo rec data ispred) i moraju da budu sve mala slova
+  
+        //alert(serviceId);              
+        
+        //.val() sluzi za dodeljivanje vrednosti poljima u formi
+        $('#disable-warning-dialog').find('[name="id"]').val(serviceId);
+        $('#disable-warning-dialog').modal('show');
+    });
+    
+    
+    $('#rows-table').on('click', '[data-action="enable"]', function(e) {
+        e.preventDefault();
+        e.stopPropagation();
+        //neki browseri ne ocitiju dobro klik na dugme pa se sledecom linijom to preventuje
+        var target = $(this).is('[data-action="enable"]') ? $(this) : $(this).closest('[data-action="enable"]');
+        
+        //dve verzije za vadjenje (od jQuery-a):
+        var serviceId = target.attr('data-service-id'); 
+        //var serviceId = target.data('serviceId'); //ovo ne moze zbog 
+        //alert(serviceId);              
+        
+        //.val() sluzi za dodeljivanje vrednosti poljima u formi
+        $('#enable-warning-dialog').find('[name="id"]').val(serviceId);
+        $('#enable-warning-dialog').modal('show');
+    });
+    
+    $('[data-action="toggle-sort"]').on('click', function(e) {
+        e.preventDefault();
+        e.stopPropagation();
+       
+        var target = $(this).is('[data-action="toggle-sort"]') ? $(this) : $(this).closest('[data-action="toggle-sort"]');
+        var sortableTbody = $('#rows-table > tbody');
+        
+        if (target.hasClass('active')) {
+            target.removeClass('active');
+            target.html('<i class="glyphicon glyphicon-list"></i> Change order');
+            // delete sortable functionallity
+            sortableTbody.sortable('destroy');
+            
+            // restore old html into tbody
+            sortableTbody.html(sortableTbody.data('oldHtml'));
+            
+            //hide "handle" for sorting, the icon in first column
+            sortableTbody.find('[data-action="sort"]').hide();
+            
+            //hide "Save-order"
+            $('[data-action="save-order"]').hide();
+        }
+        else {
+            target.addClass('active');
+            
+            //method html
+            target.html('<i class="glyphicon glyphicon-remove"></i> Cancel');  //override-uje ceo html...
+            
+            //save tbody html before sorting under key "oldHtml" into its data
+            sortableTbody.data('oldHtml', sortableTbody.html()); //kada navedemo dva atributa to je setovanje
+            
+            //initialize sortable functionality
+            sortableTbody.sortable({
+                handle: '[data-action = "sort"]'
+            });
+            
+            //show "handle" for sorting, the icon in first column
+            sortableTbody.find('[data-action="sort"]').show();
+            
+            //hide "Save-order"
+            $('[data-action="save-order"]').show();
+        }
+    });
+    
+    
+    
+    $('[data-action="save-order"]').on('click', function(e) {
+        e.preventDefault();
+        e.stopPropagation();
+        
+        var servicesSortedIds = $('#rows-table > tbody').sortable('toArray', {
+            attribute: 'data-service-id'
+        });
+    
+        //find element with name "sorted_ids" in save order form and set its value
+        //  with string in which are sorted ids separated with comma(,)
+        //  ex. "12,3,8,10,11,6,2,1,9,7,5,4"
+        var saveOrderForm = $('#save-order-form');
+        
+        saveOrderForm.find('[name="sorted_ids"]').val(servicesSortedIds.join(','));
+        //alert(servicesSortedIds);
+        
+        //manually submit form by triggering "submit" event
+        saveOrderForm.trigger('submit');
+        
+    });
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    <?php $this->inlineScript()->captureEnd(); ?>
+</script>
